fix motonational bugs