@@ -5,15 +5,11 @@ import com.fasterxml.jackson.databind.ObjectReader;
 import com.fasterxml.jackson.dataformat.csv.CsvMapper;
 import com.fasterxml.jackson.dataformat.csv.CsvSchema;
 import com.google.api.client.auth.oauth2.Credential;
-import com.google.api.client.extensions.java6.auth.oauth2.AuthorizationCodeInstalledApp;
-import com.google.api.client.extensions.jetty.auth.oauth2.LocalServerReceiver;
-import com.google.api.client.googleapis.auth.oauth2.GoogleAuthorizationCodeFlow;
-import com.google.api.client.googleapis.auth.oauth2.GoogleClientSecrets;
+import com.google.api.client.googleapis.auth.oauth2.GoogleCredential;
 import com.google.api.client.googleapis.javanet.GoogleNetHttpTransport;
 import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.JsonFactory;
 import com.google.api.client.json.gson.GsonFactory;
-import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.drive.Drive;
 import com.google.api.services.drive.DriveScopes;
 import com.google.api.services.drive.model.FileList;
@@ -22,6 +18,7 @@ import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
 import org.springframework.stereotype.Service;
+import shopify.converter.controller.motonational.MotonationalController;
 import shopify.converter.converter.motonational.MotivationalConverter;
 import shopify.converter.model.Motonational.MotonationalProduct;
 import shopify.converter.service.ProductService;
@@ -38,59 +35,84 @@ public class MotonationalService extends ProductService {
 
     private static final String APPLICATION_NAME = "ShopifyConverter";
     private static final JsonFactory JSON_FACTORY = GsonFactory.getDefaultInstance();
-    private static final String TOKENS_DIRECTORY_PATH = "/tokens";
     private static final List<String> SCOPES =
-            Collections.singletonList(DriveScopes.DRIVE);
+            new ArrayList<>(List.of(DriveScopes.DRIVE));
     private static final String CREDENTIALS_FILE_PATH = "/credentials.json";
     private static final String CSV_FOLDER_NAME = "CSV";
-    private static final String MOTONATIONAL_EXTERNAL_PRODUCTS = "Motonational.csv";
-    private static final String MOTONATIONAL_EXTERNAL_PRODUCTS_NO_BOM = "MotonationalNoBom.csv";
 
-    private static final String MOTONATIONAL_PRODUCTS_CSV = "src/main/resources/products/motonational/products.csv";
-    private static final String MOTONATIONAL_INVENTORY_CSV = "src/main/resources/products/motonational/inventory.csv";
+    private static final String MOTONATIONAL_PRODUCTS_FOLDER = MotonationalController.RESULT_DATA_MOTONATIONAL_FILE;
+    private static final String INITIAL_DATA_MOTONATIONAL_FILE = MotonationalController.INITIAL_DATA_MOTONATIONAL_FILE;
+    public static final String PRODUCTS_FILE_TYPE = MotonationalController.PRODUCTS_FILE_TYPE;
+    public static final String INVENTORY_FILE_TYPE = MotonationalController.INVENTORY_FILE_TYPE;
 
     private final MotivationalConverter motivationalConverter;
     private final FileCleanupScheduler fileCleanupScheduler;
 
-    public void parseToProductsCsv() {
+    @Override
+    public Map<String, List<String>> parseToProductsCsv() {
+
+        Map<String, List<String>> productFiles = new LinkedHashMap<>();
 
         try {
+            var fileList = downloadExternalCsv();
 
-            List<MotonationalProduct> motonationalProducts = new ArrayList<>();
-           var fileList =  downloadExternalCsv();
+//            for (String filePath : fileList){  // download in one file
+//                motonationalProducts.addAll(readCsvFile(filePath));
+//            }
+//            saveCsvFile(new ArrayList<>(motonationalProducts), motivationalConverter, MOTONATIONAL_PRODUCTS_CSV, MOTONATIONAL_INVENTORY_CSV);
 
-//            List<String> fileList = new ArrayList<>();
-//            fileList.add("initialData/motonational/FalcoBoot-product-export-21-12-2023-1703118963752.csv");
-//            fileList.add("initialData/motonational/Kabuto-product-export-21-12-2023-1703121210293.csv");
-//            fileList.add("initialData/motonational/Bobster_ProductCSV_5-12-23.csv");
-//            fileList.add("initialData/motonational/Crocbite_ProductCSV_5-12-23.csv");
-//            fileList.add("initialData/motonational/Airoh-product-export-21-12-2023-1703113161643.csv");
-//            fileList.add("initialData/motonational/Lok-Up-product-export-21-12-2023-1703122402593.csv");
-//            fileList.add("initialData/motonational/CUBE-product-export-21-12-2023-1703115647290.csv");
-//            fileList.add("initialData/motonational/Motodry-product-export-21-12-2023-1703123181623.csv");
-//            fileList.add("initialData/motonational/Five-Gloves-product-export-21-12-2023-1703117676003.csv");
-//            fileList.add("initialData/motonational/MotoPlus_ProductCSV_5-12-23.csv");
-//            fileList.add("initialData/motonational/MX-Net-product-export-21-12-2023-1703124027448.csv");
-//            fileList.add("initialData/motonational/RXT-product-export-21-12-2023-1703130542620.csv");
-//            fileList.add("initialData/motonational/Shad-product-export-21-12-2023-1703128792741.csv");
-//            fileList.add("initialData/motonational/TBR-product-export-21-12-2023-1703131291545.csv");
-//            fileList.add("initialData/motonational/ZanHeadgear_ProductCSV_5-12-23.csv");
-//            fileList.add("initialData/motonational/Zero-product-export-21-12-2023-1703132384235.csv");
+            List<String> productPaths = new ArrayList<>();
+            List<String> inventoryPaths = new ArrayList<>();
 
-            for (String filePath : fileList){
-                motonationalProducts.addAll(readCsvFile(filePath));
+            List<MotonationalProduct> motonationalProducts;
+            for (String filePath : fileList) {  // download in many Files
+                motonationalProducts = readCsvFile(filePath);
+
+                var fileName = extractFileNameFromPath(filePath);
+
+                var productPath = MOTONATIONAL_PRODUCTS_FOLDER + PRODUCTS_FILE_TYPE + "-" + fileName + ".csv";
+                var inventoryPath = MOTONATIONAL_PRODUCTS_FOLDER + INVENTORY_FILE_TYPE + "-" + fileName + ".csv";
+                productPaths.add(productPath);
+                inventoryPaths.add(inventoryPath);
+
+                fileCleanupScheduler.addFilePath(productPath);
+                fileCleanupScheduler.addFilePath(inventoryPath);
+
+                saveCsvFile(new ArrayList<>(motonationalProducts), motivationalConverter, productPath, inventoryPath);
             }
-            saveCsvFile(new ArrayList<>(motonationalProducts), motivationalConverter, MOTONATIONAL_PRODUCTS_CSV, MOTONATIONAL_INVENTORY_CSV);
 
-//            fileCleanupScheduler.addFilePath(MOTONATIONAL_EXTERNAL_PRODUCTS);
-//            fileCleanupScheduler.addFilePath(MOTONATIONAL_EXTERNAL_PRODUCTS_NO_BOM);
-//            fileCleanupScheduler.addFilePath(MOTONATIONAL_PRODUCTS_CSV);
-//            fileCleanupScheduler.addFilePath(MOTONATIONAL_INVENTORY_CSV);
+            productFiles.put(PRODUCTS_FILE_TYPE, productPaths);
+            productFiles.put(INVENTORY_FILE_TYPE, inventoryPaths);
+
 
         } catch (IOException | GeneralSecurityException e) {
             throw new RuntimeException(e);
         }
+        return productFiles;
     }
+
+    private String extractFileNameFromPath(String path) {
+        int lastSlashIndex = path.lastIndexOf("/");
+
+        if (lastSlashIndex != -1) {
+            String filenamePart = path.substring(lastSlashIndex + 1);
+
+            int firstDashIndex = filenamePart.indexOf("-");
+            int firstUnderscoreIndex = filenamePart.indexOf("_");
+
+            int firstSymbolIndex = Math.min(firstDashIndex != -1 ? firstDashIndex : Integer.MAX_VALUE,
+                    firstUnderscoreIndex != -1 ? firstUnderscoreIndex : Integer.MAX_VALUE);
+
+            if (firstSymbolIndex != Integer.MAX_VALUE) {
+                return filenamePart.substring(0, firstSymbolIndex);
+            } else {
+                return filenamePart;
+            }
+        }
+
+        return "";
+    }
+
 
     public List<String> downloadExternalCsv() throws GeneralSecurityException, IOException {
 
@@ -99,11 +121,13 @@ public class MotonationalService extends ProductService {
                 .setApplicationName(APPLICATION_NAME)
                 .build();
 
-        Map<String, String> vendors = new HashMap<>(Map.of(
+        Map<String, String> vendors = new HashMap<>(
+                Map.of(
                 "Airoh", "https://drive.google.com/drive/folders/1ObJH7Zq07dqLzk26x7fYpLJ-BL55DOMX",
                 "Five Gloves", "https://drive.google.com/drive/folders/14OKsESt6JcsSQL_d-lM8-tujxquWTTTK",
                 "SHAD", "https://drive.google.com/drive/folders/1jVLuxUN_ABca6NI-GrrUQFzjNJcWitOx",
-                "Falco", "https://drive.google.com/drive/folders/1vElcqlwhGnQwdj4XxH8d67txND2iGrn5"));
+                "Falco", "https://drive.google.com/drive/folders/1vElcqlwhGnQwdj4XxH8d67txND2iGrn5")
+        );
 
         vendors.put("TWOBROTHERS", "https://drive.google.com/drive/folders/15y50FOHqvdQWuPQnHE7T0x7so6yFUTe4");
         vendors.put("MotoDry", "https://drive.google.com/drive/folders/1w-AN5uiPoSgOMNsQYtBWhVz0mZf_PjD2");
@@ -125,61 +149,23 @@ public class MotonationalService extends ProductService {
 
             InputStream csvInputStream = downloadCsvFile(service, file.getId());
             List<CSVRecord> csvRecords = new ArrayList<>(readCSVFromInputStream(csvInputStream));
-            initialFilePaths.add(writeCSVToFile(processCSVRecords(csvRecords), file.getName()));
-//            removeBOM(MOTONATIONAL_EXTERNAL_PRODUCTS, MOTONATIONAL_EXTERNAL_PRODUCTS_NO_BOM);
+
+            var initialDataFilepath = writeCSVToFile(processCSVRecords(csvRecords), file.getName());
+            initialFilePaths.add(initialDataFilepath);
+            fileCleanupScheduler.addFilePath(initialDataFilepath);
+
         }
 
         return initialFilePaths;
     }
 
-    private static void removeBOM(String inputFilePath, String outputFilePath) {
-        try (InputStream inputStream = new FileInputStream(inputFilePath);
-             OutputStream outputStream = new FileOutputStream(outputFilePath);
-             BufferedInputStream bufferedInputStream = new BufferedInputStream(inputStream);
-             BufferedOutputStream bufferedOutputStream = new BufferedOutputStream(outputStream)) {
+    private Credential getCredentials(final NetHttpTransport HTTP_TRANSPORT) throws IOException {
+        // Load service account credentials from JSON file
+        InputStream in = new FileInputStream(CREDENTIALS_FILE_PATH);
+        GoogleCredential googleCredential = GoogleCredential.fromStream(in, HTTP_TRANSPORT, JSON_FACTORY)
+                .createScoped(SCOPES);
 
-            // Проверяем, есть ли BOM
-            byte[] bomBytes = new byte[3];
-            bufferedInputStream.mark(3);
-            bufferedInputStream.read(bomBytes, 0, 3);
-            bufferedInputStream.reset();
-
-            // Если BOM есть, пропускаем его
-            if (bomBytes[0] == (byte) 0xEF && bomBytes[1] == (byte) 0xBB && bomBytes[2] == (byte) 0xBF) {
-                bufferedInputStream.skip(3);
-            }
-
-            // Копируем оставшееся содержимое файла
-            byte[] buffer = new byte[1024];
-            int bytesRead;
-            while ((bytesRead = bufferedInputStream.read(buffer)) != -1) {
-                bufferedOutputStream.write(buffer, 0, bytesRead);
-            }
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    private Credential getCredentials(final NetHttpTransport HTTP_TRANSPORT)
-            throws IOException {
-        // Load client secrets.
-        InputStream in = MotonationalService.class.getResourceAsStream(CREDENTIALS_FILE_PATH);
-        if (in == null) {
-            throw new FileNotFoundException("Resource not found: " + CREDENTIALS_FILE_PATH);
-        }
-        GoogleClientSecrets clientSecrets =
-                GoogleClientSecrets.load(JSON_FACTORY, new InputStreamReader(in));
-
-        // Build flow and trigger user authorization request.
-        GoogleAuthorizationCodeFlow flow = new GoogleAuthorizationCodeFlow.Builder(
-                HTTP_TRANSPORT, JSON_FACTORY, clientSecrets, SCOPES)
-                .setDataStoreFactory(new FileDataStoreFactory(new java.io.File(TOKENS_DIRECTORY_PATH)))
-                .setAccessType("offline")
-                .build();
-        LocalServerReceiver receiver = new LocalServerReceiver.Builder().setPort(8888).build();
-        Credential credential = new AuthorizationCodeInstalledApp(flow, receiver).authorize("user");
-        //returns an authorized Credential object.
-        return credential;
+        return googleCredential;
     }
 
     private List<CSVRecord> readCSVFromInputStream(InputStream inputStream) throws IOException {
@@ -205,7 +191,7 @@ public class MotonationalService extends ProductService {
 
     private String writeCSVToFile(List<List<String>> records, String fileName) {
 
-        String path = "initialData/motonational/" + fileName;
+        String path = INITIAL_DATA_MOTONATIONAL_FILE + fileName;
         try (BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(path), StandardCharsets.UTF_8))) {
             for (List<String> record : records) {
                 StringBuilder line = new StringBuilder();
@@ -252,7 +238,6 @@ public class MotonationalService extends ProductService {
         return updatedRecords;
     }
 
-
     private String findFolderId(Drive service, String parentFolderId, String folderName) throws IOException {
         String pageToken = null;
         do {
@@ -282,6 +267,8 @@ public class MotonationalService extends ProductService {
         List<com.google.api.services.drive.model.File> csvFiles = new ArrayList<>();
 
         for (String parentFolderUrl : parentFolderURLs) {
+
+            System.out.println("get files from:" + parentFolderUrl);
 
             // Получение списка файлов в папке google
             FileList result = service.files().list()
